Bug 1114764 - Statusbar visibility on inline activities

--- a/apps/system/style/app_titlebar.css
+++ b/apps/system/style/app_titlebar.css
@@ -1,4 +1,4 @@
-.appWindow .titlebar {
+.appWindow > .titlebar {
   position: absolute;
   top: 0;
   width: 100%;
@@ -7,14 +7,14 @@
   z-index: 6;
 }
 
-.appWindow .titlebar .statusbar-shadow {
+.appWindow .titlebar > .statusbar-shadow {
   height: 100%;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: bottom right;
 }
 
-#screen:not(.locked) .appWindow.light .titlebar .statusbar-shadow {
+#screen:not(.locked) .appWindow.light > .titlebar .statusbar-shadow {
   filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'invert\'><feColorMatrix in=\'SourceGraphic\' color-interpolation-filters=\'sRGB\' type=\'matrix\' values=\'1 -1 0.3019 0 0 0 0.3019 0 0 0 0 0 0.3019 0 0 0 0 0 1 0\'/></filter></svg>#invert");
 }
 
@@ -23,7 +23,7 @@
   visibility: hidden;
 }
 
-.appWindow:not(.lockScreenWindow) .titlebar .notifications-shadow {
+.appWindow:not(.lockScreenWindow) > .titlebar .notifications-shadow {
   background-image: -moz-element(#ambient-indicator);
   width: 100%;
   position: absolute;
@@ -31,12 +31,12 @@
   height: .2rem;
 }
 
-.appWindow .titlebar .titlebar-maximized {
+.appWindow > .titlebar .titlebar-maximized {
   background-image: -moz-element(#statusbar-maximized);
   width: 100%;
 }
 
-.appWindow .titlebar .titlebar-minimized {
+.appWindow > .titlebar .titlebar-minimized {
   background-image: -moz-element(#statusbar-minimized);
   background-size: cover;
   width: calc(100% - 100% * var(--rocketbar-scale) + 8rem * var(--rocketbar-scale) - 0.5rem);
@@ -45,10 +45,12 @@
 }
 
 /* Transitions between the maximized / minimized status bars */
+.appWindow.inline-activity .chrome + .titlebar .titlebar-minimized,
 .chrome + .titlebar .titlebar-maximized {
   opacity: 0;
 }
 
+.appWindow.inline-activity .chrome + .titlebar .titlebar-maximized,
 .chrome.maximized + .titlebar .titlebar-maximized {
   opacity: 1;
 }
@@ -90,11 +92,11 @@
 }
 
 /* RTL View */
-html[dir="rtl"] .appWindow .titlebar .statusbar-shadow {
+html[dir="rtl"] .appWindow > .titlebar .statusbar-shadow {
   background-position: bottom left;
 }
 
-html[dir="rtl"] .appWindow .titlebar .titlebar-minimized {
+html[dir="rtl"] .appWindow > .titlebar .titlebar-minimized {
   left: 0;
   right: unset;
 }
